--- a/Pset1/Problem_3.ipynb
+++ b/Pset1/Problem_3.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "<b>Problem 3</b><br>\n",
     "The data for this problem is provided as a csv file called <b>crab_data.csv</b>.<br>\n",
-    "You need to provide answers to parts (b), (e) and (h). Refer to the Problem Set 1 pdf."
+    "You need to provide answers to parts (b) and (e). Refer to the Problem Set 1 pdf."
    ]
   },
   {
@@ -94,44 +94,6 @@
    },
    "source": [
     "<b>3e (continued)</b><br>\n",
-    "Compare visually the two histograms generated above."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(write your comments here)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
-    "<b>3(h)</b><br>\n",
-    "i. Generate a sample of the same length as the number of observations in the crab dataset. This sample should should come from a Normal distribution with the Method of Moments estimated mean and variance provided in the Pset pdf, i.e.  (μ̂ ,v̂ ). You may find the numpy library's random.normal() function helpful. The documentation can be accessed at: https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.normal.html <br>\n",
-    " \n",
-    "ii. Now, you need to produce a histogram of the random observations you generated using the Method of Moments estimates noted above. Set the bins = 20, and use color = \"red\". On the same plot, also produce the histogram of the original data (empirical pdf) using bins = 20. Set the color of that histogram to be \"gray\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
-    "<b>3h (continued)</b><br>\n",
     "Compare visually the two histograms generated above."
    ]
   },
