adding part (f) to Problem 3

--- a/Pset1/Problem_3.ipynb
+++ b/Pset1/Problem_3.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "<b>Problem 3</b><br>\n",
     "The data for this problem is provided as a csv file called <b>crab_data.csv</b>.<br>\n",
-    "You need to provide answers to parts (b) and (e). Refer to the Problem Set 1 pdf."
+    "You need to provide answers to parts (b), (e) and (f). Refer to the Problem Set 1 pdf."
    ]
   },
   {
@@ -103,10 +103,28 @@
    "source": [
     "(write your comments here)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "<b>3(f)</b><br>\n",
+    "Compute the statistics $\\hat{m}^k, 1 \\leq k \\leq 5$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Raw Cell Format",
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
