--- a/Pset1/Problem_2d.ipynb
+++ b/Pset1/Problem_2d.ipynb
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "\n",
     "# read the data\n",
-    "df = pd.read_csv(\"data_2d.csv\")"
+    "df = pd.read_csv(\"data_2d.csv\", header=None)"
    ]
   }
  ],
