--- a/Pset1/Problem_3.ipynb
+++ b/Pset1/Problem_3.ipynb
@@ -74,7 +74,7 @@
    },
    "source": [
     "<b> 3(e)</b><br>\n",
-    "i. Generate a sample of the same length as the number of observations in the crab dataset. This sample should should come from a Normal distribution with the EM algorithm's mean and variance provided in the Pset pdf, i.e. $(\\hat{\\mu}, \\hat{v} )$. You may find the numpy library's <b>random.normal()</b> function helpful. The documentation can be accessed at: https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.normal.html <br>\n",
+    "i. Generate a sample of the same length as the number of observations in the crab dataset. This sample should should come from a mixture of two Normal distributions with the EM algorithm's means and variance provided in the Pset pdf, i.e. $(\\hat{\\mu_1}, \\hat{v_1}, \\hat{\\mu_2}, \\hat{v_2} )$ and the proportions of samples from each Normal distribution is dictated by $\\hat{\\lambda}$. You may find the numpy library's <b>random.normal()</b> function helpful. The documentation can be accessed at: https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.normal.html <br>\n",
     "\n",
     "ii. Now, you need to produce a histogram of the random observations you generated using the EM estimates noted above. Set the bins = 20, and use color = \"red\". On the same plot, also produce the histogram of the original data (empirical pdf) using bins = 20. Set the color of that histogram to be \"gray\". "
    ]
