--- a/Pset2/Problem_3.ipynb
+++ b/Pset2/Problem_3.ipynb
@@ -7,14 +7,14 @@
     "editable": false
    },
    "source": [
-    "<b>Problem 4</b><br>\n",
-    "The data for this problem is provided as a csv file called <b>data_problem_4.csv</b>.<br>\n",
+    "<b>Problem 3</b><br>\n",
+    "The data for this problem is provided as a csv file called <b>data_problem_3.csv</b>.<br>\n",
     "You need to provide answers to parts (b), (c), (d) and (e). Refer to the Problem Set 2 pdf."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "\n",
     "# read data as pandas dataframe\n",
-    "data = pd.read_csv(\"data_problem_4.csv\", header=None)\n",
+    "data = pd.read_csv(\"data_problem_3.csv\", header=None)\n",
     "data = data[0].values # now your data is just an array"
    ]
   },
@@ -34,7 +34,7 @@
     "editable": false
    },
    "source": [
-    "<b> 4(b)</b><br>\n",
+    "<b> 3(b)</b><br>\n",
     "i. Use numpy to calculate the <b>mean</b> of the dataset\n",
     "ii.Use numpy to calculate the <b>median</b> of the dataset"
    ]
@@ -53,7 +53,7 @@
     "editable": false
    },
    "source": [
-    "<b> 4(c)</b><br>\n",
+    "<b> 3(c)</b><br>\n",
     "i. Re-sample the data (with replacement) 10,000 times, recording the median for each of the iterations.<br>\n",
     "ii. Plot the resulting histogram of estimates using bins=20.<br>"
    ]
@@ -72,7 +72,7 @@
     "editable": false
    },
    "source": [
-    "<b> 4(d)</b><br>\n",
+    "<b> 3(d)</b><br>\n",
     "i. Calculate the estimated bias (recall that your reference value is the median from part (b). <br>\n",
     "ii. Calculate the standard error (which is just the standard deviation of the values you plotted in the histogram)."
    ]
@@ -91,7 +91,7 @@
     "editable": false
    },
    "source": [
-    "<b> 4(e)</b><br>\n",
+    "<b> 3(e)</b><br>\n",
     "Use the estimated values (the ones you plotted in the histogram) to produce estimates of the 95% confidence intervals. You may find the <b>sort()</b> function useful for this exercise."
    ]
   },
@@ -104,7 +104,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
