--- a/Pset2/Problem_3.ipynb
+++ b/Pset2/Problem_3.ipynb
@@ -54,7 +54,7 @@
    },
    "source": [
     "<b> 3(c)</b><br>\n",
-    "i. Re-sample the data (with replacement) 10,000 times, recording the median for each of the iterations.<br>\n",
+    "i. Sample 101 data points (with replacement) and record the median. Repeat 10,000 times to get 10,000 estimates of the median.<br>\n",
     "ii. Plot the resulting histogram of estimates using bins=20.<br>"
    ]
   },
@@ -104,7 +104,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Raw Cell Format",
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
