update to the Hypotheis testing project

--- a/hypothesis/nba.ipynb
+++ b/hypothesis/nba.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1a). How many total games are in the dataset?"
+    "(1a). What is the total number of games in the dataset?"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1b). How many columns are in the dataset? Print all the column names."
+    "(1b). How many columns are there in the dataset? Print all the column names."
    ]
   },
   {
@@ -113,9 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1e). Write a function called <b>weekend_new_column()</b> to create two new columns: <br>\n",
-    "a. <b>'day_of_week'</b>: where Monday = 0, Tuesday = 1, ...., Sunday = 6 <br>\n",
-    "b. <b>'weekend'</b>: if {Saturday or Sunday} then 1, else 0.<br>\n",
+    "(1e). Write a function called <b>weekend_new_column()</b> to create two new columns: <br><br>\n",
+    "a. <b>'day_of_week'</b>: this column should be set to an integer between $0$ an $6$, both inclusive. If the game was played on Monday then set day_of_week = 0, if it was played on Tuesday then day_of_week = 1, ...., and if it was played on Sunday then day_of_week = 6 <br><br>\n",
+    "b. <b>'weekend'</b>: this column should be set to either 0 or 1. If the game was played over the weekend, i.e. on Saturday or Sunday then it should be = 1, else 0.<br><br>\n",
     "Feel free to use the function convert_to_datetime_from_numpy_datetime64() in utils.py. Also feel free to use numpy's datetime.datetime.weekday() function."
    ]
   },
@@ -164,7 +164,7 @@
    "metadata": {},
    "source": [
     "(2b). Plot a histogram of the total scores per game. Use 120 bins. <br>\n",
-    "We recommend you use 100 bins when displaying the histogram. Hint: check matplotlib's hist() function. Use bins=120 as an argument, along with the data."
+    "We recommend you use 120 bins when displaying the histogram. Hint: check matplotlib's hist() function. Use bins=120 as an argument, along with the data."
    ]
   },
   {
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Yes/No)?"
+    "(Your answer goes here. Click to enable editing.)"
    ]
   },
   {
@@ -216,15 +216,15 @@
    "metadata": {},
    "source": [
     "<b>3. During the 1990s, did scoring become more conservative in the NBA?</b> <br>\n",
-    "You might have noticed in your earlier plots that there appears to be a dip in average scores during the 1990s. We will try to test whether the difference is statistically significant."
+    "You might have noticed in your earlier plots that there appears to be a dip in average scores during the 1990s. We will try to test whether the difference is statistically significant. For the purpose of this exercise, assume that all extraneous information (or covariates) remained the same/similar across the periods under consideration."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(3a). Subset to use date ONLY from the season >= 1970 and < 2000. <br>\n",
-    "<b>Use ONLY this subset for the parts in this section.</b>"
+    "(3a). Subset to use games from the season >= 1970 and < 2000, ONLY. <br>\n",
+    "<b>Use ONLY this subset for all parts in Section 3.</b>"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(3c). What is the Null Hypothesis if we want to test whether total points scored in a game have changed across the two periods?"
+    "(3c). What is the Null Hypothesis if we want to test whether total points scored in a game have changed across the two periods? You can assume the points scores in all games are iid (simplifying assumption)."
    ]
   },
   {
@@ -284,7 +284,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(3e). Perform the 2-sample t-Test. Feel free to use the scipy.stats library to perform the t-test for independent samples."
+    "(3e). Perform the 2-sample t-Test for the means of the two samples.  <br>\n",
+    "Feel free to use the scipy.stats library to perform the t-test for independent samples."
    ]
   },
   {
@@ -313,7 +314,7 @@
    "metadata": {},
    "source": [
     "<b>4. Is there such a thing as Home Advantage?</b><br>\n",
-    "We will use the NBA dataset to statistically determine whether there is such a thing a \"home-court\" advantage."
+    "We will use the NBA dataset to statistically determine whether there is such a thing a \"home-court\" advantage. For the purpose of this exercise, assume that all extraneous information (or covariates) remained the same/similar across the periods under consideration."
    ]
   },
   {
@@ -321,7 +322,7 @@
    "metadata": {},
    "source": [
     "(4a). We first restrict the data to seasons 2000-2017. This is because the mean yearly scores prior to season 2000 demonstrate far greater variance than during this most recent period. Ideally, we want to answer questions about home advantage, for example, during a period when the inter-seasonal variability was less extreme. <br>\n",
-    "Produce a subset for seasons 2010-2017 (both inclusive)."
+    "Produce a subset for seasons in the range $[2010, 2017]$ (both inclusive)."
    ]
   },
   {
@@ -335,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(4b). What is the mean difference between home team and away team score in the subset you produced? Print the mean."
+    "(4b). What is the mean difference between home team and away team scores in the subset you produced? Print the mean."
    ]
   },
   {
@@ -349,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(4c). If you wanted to test whether there was a statisitcally significant home advantage, what would your Null Hypothesis be?"
+    "(4c). If you wanted to test whether there was a statisitcally significant home advantage, what would your Null Hypothesis be? You may assume that team scores for each game are iid (simplifying assumption) and that there are no other confounding variables impacting scoring."
    ]
   },
   {
@@ -400,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5a). We restrict the data to seasons 2000-2017. Produce a subset of the data for seasons 2000-2017."
+    "(5a). We restrict the data to seasons 2000-2017. Ensure that you are using a subset of the data for seasons 2000-2017 (as computed in Section 4)."
    ]
   },
   {
@@ -414,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5b). For the data subset you produced, plot the histogram of games played on weekends and weekdays."
+    "(5b). For the data subset you produced, plot the histogram of the total scores in games played on weekends and weekdays. Recall that you created a new column for total score in each game in Section 1."
    ]
   },
   {
@@ -428,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5c). For the data subset you prodocued, what are average scores for weekend vs weekday games? Print both."
+    "(5c). For the data subset you prodocued, what are average total scores for weekend vs weekday games? Print both."
    ]
   },
   {
@@ -449,35 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5d). Split the seasonal subset you produced to a <b>weekend</b> and <b>weekday</b> subset. The weekend subset only has weekend games and the weekday subset should only have games played over the weekdays."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(5e). What are the mean of the total points per game scored on weekends and weekdays? Print both."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(5f). What is your null hypothesis to test whether the total points scores per game is different for weekend vs weekday games?"
+    "(5f). What is your null hypothesis to test whether the total points scores per game is different for weekend vs weekday games? You may assume that team scores for each game are iid (simplifying assumption) and that there are no other confounding variables impacting scoring."
    ]
   },
   {
@@ -491,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5g). Using the subsets you produced for weekend and weekday games for seasons 2000-201, perform a two-sample t-Test to test your null hypothesis? Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
+    "(5g). Using the weekend and weekday games for seasons 2000-201, perform a two-sample t-Test to test your null hypothesis? Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
     "Print the t-statistic and the associated p-value."
    ]
   },
@@ -528,9 +501,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6a). Produce two subsets of the data:<br>\n",
+    "(6a). Produce two subsets of the data:<br><br>\n",
     "<b>df_subset_playoffs</b>: all games played between April (month=4) and June (month=6), both inclusive.<br>\n",
-    "<b>df_subset_regular</b>: all games played between September(month=9) and February(month=2), both inclusive. <br>\n",
+    "<b>df_subset_regular</b>: all games played between September(month=9) and February(month=2), both inclusive. <br><br>\n",
     "Note that we exclude March for simplicity and to avoid ambiguity."
    ]
   },
@@ -545,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6b). What is the total number of Playoff and Regular games in your dataset? Print both."
+    "(6b). What are the total number of Playoff and Regular games in your dataset? Print both."
    ]
   },
   {
@@ -559,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6c). What is the mean total score per game for Playoffs and Regular season? Print both."
+    "(6c). What are the mean total scores per game for Playoffs and Regular season? Print both."
    ]
   },
   {
@@ -587,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6e). What is your Null Hypothesis if you want to test whether the total points scored per game is different for Playoffs as compared to the Regular season?"
+    "(6e). What is your Null Hypothesis if you want to test whether the total points scored per game is different for Playoffs as compared to the Regular season? You may assume that team scores for each game are iid (simplifying assumption) and that there are no other confounding variables impacting scoring."
    ]
   },
   {
@@ -606,10 +579,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6e). Perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples.<br>\n",
+    "(6g). Perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples.<br>\n",
     "Print the t-statistic and the associated p-value."
    ]
   },
@@ -624,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6f). Print the mean total score per game for Playoffs and Regular season (between 1960-80)."
+    "(6h). Print the mean total score per game for Playoffs and Regular seasons (between 1960-80)."
    ]
   },
   {
@@ -638,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6g). On this 1960-1980 subset, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
+    "(6i). On the 1960-1980 subset, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
     "Print the t-statisitc and the associated p-value."
    ]
   },
@@ -653,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6h). What is your conclusion about Regular season scoring vs scoring in Playoffs during 1960-80?"
+    "(6j). What is your conclusion about Regular season scoring vs scoring in Playoffs during 1960-80?"
    ]
   },
   {
@@ -667,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6i). Now restrict attention to seasons 2000-2017. <br>\n",
+    "(6k). Now restrict attention to seasons 2000-2017. <br>\n",
     "Produce playoff and regular season subsets for seasons between 2000 and 2017 (both inclusive)."
    ]
   },
@@ -682,7 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6j). What are the mean total score per game for Playoffs and Regular season (2000-2017)?"
+    "(6l). What are the mean total scores per game for Playoffs and Regular seasons (2000-2017)?"
    ]
   },
   {
@@ -696,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6k). For the seasons 2000-2017, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
+    "(6m). For the seasons 2000-2017, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
     "Print the t-statisitc and the associated p-value."
    ]
   },
@@ -711,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6l). What is your conclusion about Regular season scoring vs scoring in Playoffs during 2000-17? Do you have evidence that the differences in scoring are no longer as different as they used to be?"
+    "(6n). What is your conclusion about Regular season scoring vs scoring in Playoffs during 2000-17? Do you have evidence that the differences in scoring are no longer as different as they used to be?"
    ]
   },
   {
@@ -728,7 +708,7 @@
     "<b>7. The Michael Jordan Effect.</b><br>\n",
     "Widely regarded as the all-time greatest players in the history of the NBA, Michael Jordan led the Chicago Bulls to six championships (1991-93 and 1996-98). The other constants during the 1991-1998 Bulls era were hall of famer Scottie Pipen and coach Phil Jackson. We would like to study whether Jordan's presence on the team was (statistically) significant in bringing the championships to the Bulls. <br>\n",
     "Conveniently (for us), Jordan retired from basketball after winning three consecutive NBA championships with the Chicago Bulls. He retired ahead of the 1994 season but returned back from retirement late during the 1995 season to eventually lead the Bulls to three more titles in the 1996, 1997, 1998 seasons. <br>\n",
-    "During his absence, both Pipen and Jackson were still at the Bulls, allowing us to study the impact of Michael Jordan's absence on the Chicago Bulls' performance."
+    "During his absence, both Pipen and Jackson were still at the Bulls, allowing us to study the impact of Michael Jordan's absence on the Chicago Bulls' performance. This fact will allow us to assume that the only change in the years with or without Jordan in the period 1992-1997 was Michael Jordan's presence/absence. You may assume there are no other confounding factors at play."
    ]
   },
   {
@@ -881,7 +861,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(7k). While Scottie Pipen and Phil Jackson were constants during the entire period 1992-1998, can you think of reasons to cast doubt on the conclusions reached by the tests?"
+    "(7k). While Scottie Pipen and Phil Jackson were constants during the entire period 1992-1998, can you think of reasons to cast doubt on the conclusions reached by the tests? <br>\n",
+    "Hint: we want you to question whether the assumption about \"no other confounding variables\" is valid? Could there be other factors at play?"
    ]
   },
   {
@@ -904,7 +885,7 @@
    "metadata": {},
    "source": [
     "(8a). First, write a function, <b>rest_days()</b> which takes as input the complete dataset as a dataframe and adds a new column which records the total number of nights of rest that the home and away teams have had for each game. <br>\n",
-    "<b>Note</b>: the column must track the sum of the rest days for the home and away team. <br>\n",
+    "<b>Note</b>: the column must track the <b>sum</b> of the rest days for the home and away team. <br>\n",
     "If a team has a prolonged rest (i.e. > 7 days), set that to 8 days. This will help eliminate the skewed effects of strikes and long periods off (e.g. the summer).<br>\n",
     "Therefore, the range for the new column is 2-16 days (both inclusive)."
    ]
@@ -951,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(8d). What does the histogram tell you about the schedule in an NBA season?"
+    "(8d). What does the histogram tell you about the schedule of an NBA team during the season?"
    ]
   },
   {
@@ -981,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(8f). What would your Null Hypothesis be if you wanted to test whether back_to_back games produce different scoring than games with combined rest between 3-4 days?"
+    "(8f). What would your Null Hypothesis be if you wanted to test whether back_to_back games produce different scoring than games with combined rest between 3-4 days? Assume there are no other confounding variables at play."
    ]
   },
   {
@@ -995,7 +976,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(8g). Print the mean total score per game for the <b>back_to_back</b> and <b>longer</b> subsets (for seasons 2000-2017)."
+    "(8g). Print the mean total scores per game for the <b>back_to_back</b> and <b>longer</b> subsets (for seasons 2000-2017)."
    ]
   },
   {
@@ -1037,21 +1018,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
